[gd_scene load_steps=15 format=3 uid="uid://ctvoy14dhl2uo"]

[ext_resource type="Script" path="res://scripts/Rain_water_harvesting/StaticBody2D.gd" id="1_7xgsn"]
[ext_resource type="Texture2D" uid="uid://vnrvqo2hn77p" path="res://assets/Drinking_Fountain_1_loop_3-6.png" id="2_engal"]
[ext_resource type="AudioStream" uid="uid://cia7phgsxh7ev" path="res://assets/sounds/WhatsApp Audio 2024-05-19 at 07.29.29_cb4608f0.mp3" id="3_3sg6l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fjsmv"]
atlas = ExtResource("2_engal")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8hw"]
atlas = ExtResource("2_engal")
region = Rect2(224, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1oc1"]
atlas = ExtResource("2_engal")
region = Rect2(256, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jpse"]
atlas = ExtResource("2_engal")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggbf6"]
atlas = ExtResource("2_engal")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ubj5"]
atlas = ExtResource("2_engal")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy7fo"]
atlas = ExtResource("2_engal")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6nk3"]
atlas = ExtResource("2_engal")
region = Rect2(192, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_sxk07"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjsmv")
}],
"loop": true,
"name": &"tapClosed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1oc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjsmv")
}],
"loop": false,
"name": &"tapFix",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jpse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggbf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ubj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy7fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6nk3")
}],
"loop": true,
"name": &"tapOpen",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2243"]
size = Vector2(17, 52)

[sub_resource type="CircleShape2D" id="CircleShape2D_rgegv"]
radius = 46.0435

[node name="Tap" type="StaticBody2D"]
script = ExtResource("1_7xgsn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sxk07")
animation = &"tapOpen"
frame_progress = 0.292097

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -2)
shape = SubResource("RectangleShape2D_p2243")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 20.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 5)
shape = SubResource("CircleShape2D_rgegv")

[node name="Label" type="Label" parent="."]
offset_left = -37.0
offset_top = -36.0
offset_right = 122.0
offset_bottom = -13.0
scale = Vector2(0.5, 0.5)
text = "Press [ E ] to interact"

[node name="WaterDamage" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3sg6l")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="WaterDamage" to="." method="_on_water_damage_timeout"]
